--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 dlib==19.24.2
-matplotlib==3.9.2
+matplotlib==3.9.3
 mediapipe==0.10.14
 numpy==1.24.3
 opencv_contrib_python==4.10.0.84
 opencv_python==4.9.0.80
 pandas==2.0.2
 scipy==1.14.1
+streamlit==1.32.1
