--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 dlib==19.24.2
-matplotlib==3.9.3
+matplotlib==3.9.2
 mediapipe==0.10.14
-numpy>=1.26.0
-opencv-contrib-python==4.10.0.84
-setuptools>=65.5.0
+numpy==1.24.3
+opencv_contrib_python==4.10.0.84
+opencv_python==4.9.0.80
+pandas==2.0.2
+scipy==1.14.1
