--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dlib==19.24.2
 matplotlib==3.9.2
 mediapipe==0.10.14
-numpy==1.24.3
+numpy>=2.2.0
 opencv_contrib_python==4.10.0.84
 opencv_python==4.9.0.80
 pandas==2.0.2
